# MuonHUB

./: CMakeLists.txt  CMakeLists.txt_notworking  LICENSE  Makefile  README.md  test.sh
configs/: template.cfg  template.cfg~  template_drs4.cfg  template_picoscope.cfg
data/: filelist.txt  filelist.txt~  picoScope_demo_filelist.txt
misc/tclap/: Arg.h
plugins/: DRS4.cpp  DRS4.h  DT5702.cpp  DT5702.h  anaDT5702.cpp  anaDT5702.h  paths.h  picoScope.cpp  picoScope.h  test.cpp  test.h
scripts/: picoScope_mklist.sh  picoScope_rename.sh
src/: Framework.cpp  Framework.h  PluginBase.h  PluginFactory.h  config.h  main.cpp
test/: test.sh
